@@ -1,3 +1,8 @@
+Tue Jul 30 07:24:12 1996  Kevin Layer  <layer@freezer>
+
+	* fi-lep.el: defontify in lep::buffer-region
+	* local-fi-developer-hooks.el: fix use of push-mark for Xemacs
+
 Thu Jun 27 16:56:49 1996  Kevin Layer  <layer@freezer>
 
 	* Makefile: revamp to make some compilation warnings go away (load all
